--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ img {
 /* Glob */
 .container {
   margin: 0 auto;
-  padding: 0 42px;
+  padding: 0 50px;
   max-width: 1700px;
 }
 
@@ -196,6 +196,7 @@ img {
 .header__menu-list-item-link:focus:not(:active) {
   background-color: var(--color-purple-dark);
   color: var(--color-white);
+  outline: none;
 }
 
 .header__menu-list-item-link:hover {
@@ -414,6 +415,14 @@ img {
   -webkit-transition: fill .3s ease-in-out;
   -o-transition: fill .3s ease-in-out;
   transition: fill .3s ease-in-out;
+}
+
+.header__menu-search-btn:focus rect {
+  fill: var(--color-purple-dark);
+}
+
+.header__menu-search-btn:focus path {
+  fill: var(--color-purple-dark);
 }
 
 .header__menu-search-btn:active rect {
@@ -774,69 +783,6 @@ img {
   margin-right: 50px;
 }
 
-.header__scroll-list-item {
-  position: relative;
-  padding-top: 10px;
-  padding-left: 14px;
-  max-width: 220px;
-  min-height: 40px;
-  overflow: hidden;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.header__scroll-list-item { 
-  position: relative;
-}
-
-.header__scroll-list-item::after { 
-  content: ""; 
-  position: absolute; 
-  top: 0; 
-  right: 0; 
-  left: 0; 
-  opacity: 0;
-  border: 3px solid var(--color-purple);
-  width: 100%;
-  height: 100%;
-  -webkit-transition: opacity .3s ease-in-out;
-  -o-transition: opacity .3s ease-in-out;
-  transition: opacity .3s ease-in-out;
-}
-
-.header__scroll-list-item::before { 
-  content: ""; 
-  position: absolute; 
-  top: 0; 
-  right: 0; 
-  left: 0; 
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  background: rgba(194, 131, 243, 0.4);
-  -webkit-transition: opacity .3s ease-in-out;
-  -o-transition: opacity .3s ease-in-out;
-  transition: opacity .3s ease-in-out;
-}
-
-.header__scroll-list-item:focus::after { 
-  outline: none;
-  opacity: 1; 
-}
-
-.header__scroll-list-item:hover::after { 
-  opacity: 1; 
-}
-
-.header__scroll-list-item:active::before { 
-  opacity: 1; 
-}
-
-.header__scroll-list-item:not(:last-child) {
-  margin-bottom: 20px;
-}
-
 .header__impressionism-scroll-item-one {
   background-image: url(../img/impressionism-select-one.jpg);
 }
@@ -914,6 +860,65 @@ img {
 
 .header__vanguard-scroll-item-four {
   background-image: url(../img/vanguard-select-four.jpg);
+}
+
+.header__scroll-list-item {
+  position: relative;
+  padding-top: 10px;
+  padding-left: 14px;
+  max-width: 220px;
+  min-height: 40px;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  outline: none;
+}
+
+.header__scroll-list-item::after { 
+  content: ""; 
+  position: absolute; 
+  top: 0; 
+  right: 0; 
+  left: 0; 
+  opacity: 0;
+  border: 3px solid var(--color-purple);
+  width: 100%;
+  height: 100%;
+  -webkit-transition: opacity .3s ease-in-out;
+  -o-transition: opacity .3s ease-in-out;
+  transition: opacity .3s ease-in-out;
+}
+
+.header__scroll-list-item::before { 
+  content: ""; 
+  position: absolute; 
+  top: 0; 
+  right: 0; 
+  left: 0; 
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  background: rgba(194, 131, 243, 0.4);
+  -webkit-transition: opacity .3s ease-in-out;
+  -o-transition: opacity .3s ease-in-out;
+  transition: opacity .3s ease-in-out;
+}
+
+.header__scroll-list-item:focus::after { 
+  opacity: 1; 
+}
+
+.header__scroll-list-item:hover::after { 
+  opacity: 1; 
+}
+
+.header__scroll-list-item:active::before { 
+  opacity: 1; 
+}
+
+.header__scroll-list-item:not(:last-child) {
+  margin-bottom: 20px;
 }
 
 .header__search {
@@ -1062,7 +1067,6 @@ img {
 .section-hero__container {
   padding-top: 67px;
   padding-bottom: 122px;
-  pointer-events: none;
 }
 
 .section-hero__heading-official {
@@ -1108,6 +1112,7 @@ img {
   padding: 19.5px 31px 19.5px 31px;
   border: 3px solid var(--color-purple);
   border-radius: 100px;
+  outline: none;
   max-width: 314px;
   min-height: 70px;
   background-color: var(--color-purple);
@@ -2249,6 +2254,7 @@ img {
   border-bottom: 1px solid var(--color-white);
   background-color: var(--color-purple);
   color: var(--color-white);
+  outline: none;
 }
 
 .section-events__card-link:hover {
@@ -2404,6 +2410,7 @@ img {
 .section-projects__description-link:focus:not(:active) {
   background-color: var(--color-purple);
   color: var(--color-white);
+  outline: none;
 }
 
 .section-projects__description-link:hover {
@@ -2557,6 +2564,7 @@ img {
 
 .section-projects__slide:focus:not(:active) {
   border: 1px solid var(--color-purple);
+  outline: none;
 }
 
 .section-projects__slide:hover .section-projects__slid-img {
@@ -2720,6 +2728,16 @@ img {
   border-radius: 100px;
   width: 270px;
   height: 50px;
+  transition: background-color .3s ease-in-out;
+}
+
+.section-feedback__reset:focus {
+  background-color: #EAEAEA;
+  outline: none;
+}
+
+.section-feedback__reset:hover {
+  background-color: #EAEAEA;
 }
 
 .section-feedback__list-form-item-label {
@@ -2728,7 +2746,7 @@ img {
 
 .just-validate-error-label {
   position: absolute;
-  top: -30px;
+  top: -33px;
   left: 30px;
   width: max-content;
   font-weight: 400;
@@ -2737,8 +2755,12 @@ img {
   color: var(--color-red);
 }
 
-.validate-error-label{
-  border: 1px solid var(--color-red);
+.just-validate-error-label {
+  color: var(--color-red)
+}
+
+.just-validate-error-field {
+  border:1px solid var(--color-red);
 }
 
 .just-validate-error-label:first-child {
@@ -2825,7 +2847,11 @@ img {
   transition: filter .3s ease-in-out, border .3s ease-in-out, -webkit-filter .3s ease-in-out;
 }
 
-.section-feedback__svg:focus {
+.section-feedback__social-svg {
+  outline: none;
+}
+
+.section-feedback__social-svg:focus .section-feedback__svg {
   -webkit-filter: opacity(30%);
   filter: opacity(30%);
 }
